--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:h2:mem
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=username
 spring.datasource.password=password
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
